<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/servicesFragment"
        android:icon="@drawable/services"
        android:title="@string/services" />
    <item
        android:id="@+id/clientsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/clients" />
    <item
        android:id="@+id/chemistryFragment"
        android:icon="@drawable/cash"
        android:title="@string/chemistry" />
    <item
        android:id="@+id/cashoutFragment"
        android:icon="@drawable/chemistry"
        android:title="@string/cashout" />
</menu>