<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.subfragments.AddServiceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pool_status"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/pool_status_seek_bar_services"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/pool_status_seek_bar_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="10"
        app:labelBehavior="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/ph_seek_bar_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:stepSize="10"
        android:valueFrom="680"
        android:valueTo="820"
        app:labelBehavior="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Service price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServicePrice"
        app:startIconDrawable="@drawable/cash">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtNote"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"

        android:ems="10"
        android:hint="@string/note"
        android:inputType="text"
        app:helperText="Optional"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph_seek_bar_services"
        app:startIconDrawable="@drawable/baseline_article_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ph"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/ph_seek_bar_services"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/add_serv_btn"
        android:layout_width="148dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="92dp"
        android:text="@string/datetime"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/now"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/testBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Search user"
        app:icon="@drawable/baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testBtn" />

    <CheckBox
        android:id="@+id/cbPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:text="Paid ?"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvServicePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="140dp"
        android:text="Service price"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_serv_btn"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>